--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "uuid": "^9.0.0"
   }
 }
